index.html: added header, section, form and first aside

--- a/index.html
+++ b/index.html
@@ -8,5 +8,42 @@
   </head>
   <body>
 
+    <header>
+      <img src="#" alt="airbnb logo"/>
+      <img src="#" alt="dropdown menu icon"  />
+    </header>
+
+    <section>  <!-- Different text displayed on firefox // chrome browsers -->
+      <h1>Airbnb</h1>
+      <p>
+        Votre prochain voyage commence sur Airbnb.
+      </p>
+    </section>
+
+    <form>
+      <img src="https://cdn1.iconfinder.com/data/icons/hawcons/32/698956-icon-111-search-20.png" alt="search icon" />
+
+    </form>
+
+    <nav>
+      <a href="#">Recommandé</a>
+      <a href="#">Logements</a>
+      <a href="#">Expériences</a>
+      <a href="#">Lieux</a>
+    </nav>
+
+    <aside>
+      <h3>Réservées à l'instant</h3>
+      <figure>
+        <img src="#" alt="#"/>
+        <figcaption>
+          <p>X€</p>
+          <p>description of stay</p>
+          <img src="#" alt="star rank" />
+          <p>4 commentaires</p>
+        </figcaption>
+      </figure>
+    </aside>
+
   </body>
 </html>
