index.html: added img (search icon, figure and star rating icon)

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
     <aside>
       <h3>Réservées à l'instant</h3>
       <figure>
-        <img src="#" alt="#"/>
+        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-1-177x265.jpg" alt="#"/>
         <figcaption>
           <p>X€</p>
           <p>description of stay</p>
-          <img src="#" alt="star rank" />
+          <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
           <p>4 commentaires</p>
         </figcaption>
       </figure>
