index.html: added link to google font family // styles.html:  applied fontfamily (poppins) to body

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <lang="fr" />
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet"> <!-- closest font-family to Airbnb font circular -->
     <link rel="icon" href="https://a0.muscache.com/airbnb/static/logotype_favicon-21cc8e6c6a2cca43f061d2dcabdf6e58.ico">
     <title>Locations de vacances, logements, expériences et lieux - Airbnb</title>
