index.html: added imgs to <header> (logo and menu arrow)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
 
     <header>
-      <img src="#" alt="airbnb logo"/>
-      <img src="#" alt="dropdown menu icon"  />
+      <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/logo-34x34.png" alt="airbnb logo"/>
+      <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-original/menu-arrowdown-9x9.png" alt="dropdown menu icon"  />
     </header>
 
     <section>  <!-- Different text displayed on firefox // chrome browsers -->
@@ -37,7 +37,7 @@
     <aside>
       <h3>Réservées à l'instant</h3>
       <figure>
-        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-1-177x265.jpg" alt="#"/>
+        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-2-177x265.jpg" alt="#"/>
         <figcaption>
           <p>X€</p>
           <p>description of stay</p>
