index.html: in <figcaption> put in seperate <div . ratings-figcaption> star-ratings img (x4) and p // added properties (flex and flex-start)

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8">
-    <lang="fr" />
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet"> <!-- closest font-family to Airbnb font circular -->
     <link rel="icon" href="https://a0.muscache.com/airbnb/static/logotype_favicon-21cc8e6c6a2cca43f061d2dcabdf6e58.ico">
     <title>Locations de vacances, logements, expériences et lieux - Airbnb</title>
   </head>
+
   <body>
 
     <header>
@@ -37,15 +38,27 @@
     <aside>
       <h3>Réservées à l'instant</h3>
       <figure>
-        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-2-177x265.jpg" alt="#"/>
+        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-3-177x265.jpg" alt="#"/>
         <figcaption>
-          <p>X€</p>
-          <p>description of stay</p>
-          <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-          <p>4 commentaires</p>
+          <p class="price-figcaption">39€</p>
+          <p>Experience timeless classics...</p>
+
+          <div class="ratings-figcaption">
+
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+            <p class="comments-figcaption">4 commentaires</p>
+
+          </div>
+
+
         </figcaption>
       </figure>
     </aside>
 
   </body>
+  
 </html>
