index.html: updated h1 text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <section>  <!-- Different text displayed on firefox // chrome browsers -->
-      <h1>Airbnb</h1>
+      <h1>Où souhaitez-vous aller ?</h1>
       <p>
         Votre prochain voyage commence sur Airbnb.
       </p>
@@ -60,5 +60,5 @@
     </aside>
 
   </body>
-  
+
 </html>
