index.html: updated <figcaption> - removed div, put figcaption desc text into same <p> and changed <p .price-figcaption> into <span .figcaption> instead // updated styles.css <figcaption>

--- a/index.html
+++ b/index.html
@@ -39,19 +39,21 @@
       <h3>Réservées à l'instant</h3>
       <figure>
         <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-3-177x265.jpg" alt="#"/>
+
         <figcaption>
-          <p class="price-figcaption">39€</p>
-          <p>Experience timeless classics...</p>
+
+          <p>
+            <span class="price-figcaption">39€</span>
+            Experience timeless classics...
+        </p>
 
           <div class="ratings-figcaption">
-
             <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
             <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
             <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
             <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
 
             <p class="comments-figcaption">4 commentaires</p>
-
           </div>
 
 
