--- a/index.html
+++ b/index.html
@@ -37,28 +37,127 @@
 
     <aside>
       <h3>Réservées à l'instant</h3>
+
+      <div class="row-figure-aside">
+
       <figure>
-        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-3-177x265.jpg" alt="#"/>
+        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
         <figcaption>
 
           <p>
-            <span class="price-figcaption">39€</span>
-            Experience timeless classics...
-        </p>
+            <span class="price-figcaption">90€</span>
+            Ride horses to medieval villages...
+          </p>
 
           <div class="ratings-figcaption">
             <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
             <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
             <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
             <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
 
-            <p class="comments-figcaption">4 commentaires</p>
+            <p class="comments-figcaption">14 commentaires</p>
           </div>
-
 
         </figcaption>
       </figure>
+
+      <figure>
+        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+
+        <figcaption>
+
+          <p>
+            <span class="price-figcaption">90€</span>
+            Ride horses to medieval villages...
+          </p>
+
+          <div class="ratings-figcaption">
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+            <p class="comments-figcaption">14 commentaires</p>
+          </div>
+
+        </figcaption>
+      </figure>
+
+      <figure>
+        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+
+        <figcaption>
+
+          <p>
+            <span class="price-figcaption">90€</span>
+            Ride horses to medieval villages...
+          </p>
+
+          <div class="ratings-figcaption">
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+            <p class="comments-figcaption">14 commentaires</p>
+          </div>
+
+        </figcaption>
+      </figure>
+
+      <figure>
+        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+
+        <figcaption>
+
+          <p>
+            <span class="price-figcaption">90€</span>
+            Ride horses to medieval villages...
+          </p>
+
+          <div class="ratings-figcaption">
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+            <p class="comments-figcaption">14 commentaires</p>
+          </div>
+
+        </figcaption>
+      </figure>
+
+      <figure>
+        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+
+        <figcaption>
+
+          <p>
+            <span class="price-figcaption">90€</span>
+            Ride horses to medieval villages...
+          </p>
+
+          <div class="ratings-figcaption">
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+            <p class="comments-figcaption">14 commentaires</p>
+          </div>
+
+        </figcaption>
+      </figure>
+
+      </div>
+
+
     </aside>
 
   </body>
