index.html: added <aside> for row 2. updated h3

--- a/index.html
+++ b/index.html
@@ -36,129 +36,256 @@
       <a href="#">Lieux</a>
     </nav>
 
+<!-- ASIDE Row #1 "Réservées à l'instant" -->
+
     <aside>
       <h3>Réservées à l'instant</h3>
 
       <div class="row-figure-aside">
 
-      <figure>
-        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
-        <figcaption>
+          <figcaption>
 
-          <p>
-            <span class="price-figcaption">90€</span>
-            Ride horses to medieval villages...
-          </p>
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
 
-          <div class="ratings-figcaption">
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
 
-            <p class="comments-figcaption">14 commentaires</p>
-          </div>
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
 
-        </figcaption>
-      </figure>
+          </figcaption>
+        </figure>
 
-      <figure>
-        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
-        <figcaption>
+          <figcaption>
 
-          <p>
-            <span class="price-figcaption">90€</span>
-            Ride horses to medieval villages...
-          </p>
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
 
-          <div class="ratings-figcaption">
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
 
-            <p class="comments-figcaption">14 commentaires</p>
-          </div>
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
 
-        </figcaption>
-      </figure>
+          </figcaption>
+        </figure>
 
-      <figure>
-        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
-        <figcaption>
+          <figcaption>
 
-          <p>
-            <span class="price-figcaption">90€</span>
-            Ride horses to medieval villages...
-          </p>
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
 
-          <div class="ratings-figcaption">
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
 
-            <p class="comments-figcaption">14 commentaires</p>
-          </div>
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
 
-        </figcaption>
-      </figure>
+          </figcaption>
+        </figure>
 
-      <figure>
-        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
-        <figcaption>
+          <figcaption>
 
-          <p>
-            <span class="price-figcaption">90€</span>
-            Ride horses to medieval villages...
-          </p>
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
 
-          <div class="ratings-figcaption">
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
 
-            <p class="comments-figcaption">14 commentaires</p>
-          </div>
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
 
-        </figcaption>
-      </figure>
+          </figcaption>
+        </figure>
 
-      <figure>
-        <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
 
-        <figcaption>
+          <figcaption>
 
-          <p>
-            <span class="price-figcaption">90€</span>
-            Ride horses to medieval villages...
-          </p>
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
 
-          <div class="ratings-figcaption">
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
-            <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
 
-            <p class="comments-figcaption">14 commentaires</p>
-          </div>
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
 
-        </figcaption>
-      </figure>
+          </figcaption>
+        </figure>
 
       </div>
+    </aside>
 
 
+<!-- ASIDE Row #2 "Expériences" -->
+
+
+    <aside>
+      <h3>Expériences</h3>
+
+      <div class="row-figure-aside">
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+
+          <figcaption>
+
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
+
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
+
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+
+          <figcaption>
+
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
+
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
+
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+
+          <figcaption>
+
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
+
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
+
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+
+          <figcaption>
+
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
+
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
+
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/exp-4-177x265.jpg" alt="#"/>
+
+          <figcaption>
+
+            <p>
+              <span class="price-figcaption">90€</span>
+              Ride horses to medieval villages...
+            </p>
+
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
+
+          </figcaption>
+        </figure>
+
+      </div>
     </aside>
 
   </body>
