--- a/index.html
+++ b/index.html
@@ -288,6 +288,105 @@
       </div>
     </aside>
 
+<!-- ASIDE Row #3 "Logements" -->
+
+    <aside>
+      <h3>Logements</h3>
+
+      <div class="row-figure-aside">
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/logement-240x160.jpg" alt="#"/>
+
+          <figcaption>
+
+            <p>
+              <span class="price-figcaption">56€
+              La Rosa de Ortega</span>
+            </p>
+
+            <p>
+              Chambre privée - 1 lit
+            </p>
+
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
+
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/logement-240x160.jpg" alt="#"/>
+
+          <figcaption>
+
+            <p>
+              <span class="price-figcaption">56€
+              La Rosa de Ortega</span>
+            </p>
+
+            <p>
+              Chambre privée - 1 lit
+            </p>
+
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
+
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/logement-240x160.jpg" alt="#"/>
+
+          <figcaption>
+
+            <p>
+              <span class="price-figcaption">56€
+              La Rosa de Ortega</span>
+            </p>
+
+            <p>
+              Chambre privée - 1 lit
+            </p>
+
+            <div class="ratings-figcaption">
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+              <img src="https://cdn4.iconfinder.com/data/icons/standard-free-icons/139/Star01-16.png" alt="star rating" />
+
+              <p class="comments-figcaption">14 commentaires</p>
+            </div>
+
+          </figcaption>
+        </figure>
+
+      </div>
+
+
+
+
+
+    </aside>
+
+
+
+
   </body>
 
 </html>
