index.html: added <aside> row 4 and updated its figcaption>

--- a/index.html
+++ b/index.html
@@ -378,14 +378,64 @@
 
       </div>
 
-
-
-
-
     </aside>
 
+<!-- ASIDE Row #4 "Destinations à la une" -->
+
+    <aside>
+      <h3>Destinations à la une	</h3>
+
+      <div class="row-figure-aside">
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-114x177.jpg" alt="#"/>
+          <figcaption>
+            <p><span class="price-figcaption">
+              San Francisco
+            </span></p>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-114x177.jpg" alt="#"/>
+          <figcaption>
+            <p><span class="price-figcaption">
+              San Francisco
+            </span></p>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-114x177.jpg" alt="#"/>
+          <figcaption>
+            <p><span class="price-figcaption">
+              San Francisco
+            </span></p>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-114x177.jpg" alt="#"/>
+          <figcaption>
+            <p><span class="price-figcaption">
+              San Francisco
+            </span></p>
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/city-114x177.jpg" alt="#"/>
+          <figcaption>
+            <p><span class="price-figcaption">
+              San Francisco
+            </span></p>
+          </figcaption>
+        </figure>
 
 
+      </div>
+
+    </aside>
 
   </body>
 
