index.html: added <section> (img, h2, p and button) // styles.css: added properties for <button>

--- a/index.html
+++ b/index.html
@@ -432,10 +432,26 @@
           </figcaption>
         </figure>
 
-
       </div>
 
     </aside>
+
+<!-- #### Section : "hosts" #### -->
+
+    <section>
+
+      <img src="file:///home/clairejacquet/sites/prod/5semaine/airbnb-home/images/img-mobile/host-414x217.jpg" alt="#" />
+
+      <h2>Ouvrez la porte à un voyageur et à une nouvelle vie</h2>
+
+      <p>
+        Complétez vos revenus en accueillant des voyageurs.
+      </p>
+
+      <button type="button">Estimer mes revenus</button>
+
+    </section>
+
 
   </body>
 
